# lattice-deduction-transformers

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/maze/: data.py  eval_only.py  pregen.py  run.py  train.py
experiments/minesweeper/: MINESWEEPER.md  data.py  eval_only.py  llm_eval.py  run.py  trace_gen.py  train.py
experiments/snowflake/: data.py  eval_only.py  gen_data.py  run.py  train.py
experiments/sudoku/: aug.py  dpll.py  ema.py  eval_only.py  run.py  solve.py  train.py
src/lattice_diffusion/data/: maze_hard.py  maze_synthetic.py  sudoku_extreme.py
src/lattice_diffusion/modal/: image.py
src/lattice_diffusion/models/: looped_transformer.py  transformer2d.py  weighted_bce.py
src/lattice_diffusion/training/utils/: checkpoint.py  scheduler.py
