[project]
name = "lattice-deduction-transformers"
version = "0.1.0"
description = "Reproduction code for Lattice Deduction Transformers (arXiv:2605.08605)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Liam Davis" },
    { name = "Leopold Haller", email = "leo@axiommath.ai" },
    { name = "Alberto Alfarano" },
    { name = "Mark Santolucito" },
]
dependencies = [
    "datasets>=4.5.0",
    "huggingface_hub>=0.20",
    "modal>=1.3.3",
    "numpy>=2.2.6",
    "pyarrow>=23.0.1",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_diffusion"]
